--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,21 @@
 {
-    "name": "benjacho/belongs-to-many-field",
-    "description": "belongsToMany nova representation in field.",
-    "keywords": [
-        "laravel",
-        "nova",
-        "belongsToMany",
-        "Many to Many Field"
-    ],
-    "license": "MIT",
-  "authors": [
-    {
-      "name": "Benjamin Flores",
-      "email": "christianbfc97@gmail.com",
-      "homepage": "https://github.com/Benjacho"
-    }
-  ],
-  "require": {
-        "php": "^8.1"
+    "name": "softly-team/belongs-to-many-field-nova",
+    "description": "A Laravel Nova field for BelongsToMany relationships",
+    "type": "library",
+    "require": {
+        "php": "^8.2",
+        "laravel/nova": "^4.0"
     },
     "autoload": {
         "psr-4": {
-            "Benjacho\\BelongsToManyField\\": "src/"
+            "OperativeIT\\BelongsToManyField\\": "src/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Benjacho\\BelongsToManyField\\FieldServiceProvider"
+                "OperativeIT\\BelongsToManyField\\BelongsToManyFieldServiceProvider"
             ]
         }
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    }
 }
